# fish-words

./: CMakeLists.txt
data/: fish-words.desktop
src/: passwords.vala  prompt.vala
